# vardoku.rs

./: Cargo.toml  LICENSE  README.md
src/: digit.rs  main.rs
