[package]
name = "vardoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.1"
egui_grid = { version = "0.5.2", git = "https://github.com/mythitorium/egui-grid" }
rand = "0.8.5"
sudokugen = "0.4.0"
egui_extras = "0.28.1"